# deep-research-langgraph

./: .docker.env.template  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  ROADMAP.md  checkpoints.db-shm  checkpoints.db-wal  deploy.sh  docker-compose.yml  prompt.md  pyproject.toml  research_cache.db
.github/workflows/: ci.yml
app/: __init__.py  agent.py  cache.py  cli.py  config.py  mcp_server.py  models.py  state.py  tokens.py
app/nodes/: __init__.py  composer.py  enhancer.py  evaluator.py  planner.py  report_critic.py  researcher.py
app/tools/: __init__.py  citations.py  search.py
fsi-deep-research/: launch.py  report_searxng.md  research_topic.txt
fsi-deep-research/fsi-deep-research/: report_RETAIL_BANKING_VALUE_CHAIN_&_ISV_ECOSYST_20260527_203820.md
searxng-config/: settings.yml
tests/: test_agent.py  test_integration.py  test_mcp_server.py
